--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
   <script defer src="./script.js"></script>
-  <title>Portfólio-Pessoal</title>
+  <title>Sidebar</title>
 </head>
 <body>
   <nav class="sidebar close">
